--- a/glass-website/index.html
+++ b/glass-website/index.html
@@ -71,7 +71,7 @@
               <img class="image3" src="./images/spiderman.png" alt="" />
               <div class="card-info">
                 <h2 class="gameTitle">Spiderman Miles Morales</h2>
-                <p>PS5 Version</p>
+                <p class="gameTitle">PS5 Version</p>
                 <div class="progress"></div>
               </div>
               <h2 class="percentage">60%</h2>
